# discord-event-manager

./: .gitignore  README.md  main.py  pyproject.toml  sample.config.json
cogs/: help.py  manage.py  view.py
data/: __init__.py  firestore.py
helpers/: type_aliases.py  utils.py
ui/: embeds.py  selects.py  views.py
