[tool.poetry]
name = "discord-event-manager"
version = "0.1.0"
description = ""
authors = ["Krishnan Shankar <krishnans2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
py-cord = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
