[tool.poetry]
name = "discord-event-manager"
version = "0.1.0"
description = ""
authors = ["Krishnan Shankar <krishnans2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
py-cord = "^2.4.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ["py39", "py310", "py311"]
